change image folder

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ initial-scale=1, shrink-to-fit=no" />
 	<link rel="stylesheet"
 href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/boots
 trap.min.css" />
-	<link rel="stylesheet" type="text/css" href="Styles.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 
@@ -43,7 +43,7 @@ trap.min.css" />
 				</div>
 
 				<div class="col">
-					<img src="images5/me.png">
+					<img src="images/me.png">
 				</div>
 
 			</div>
@@ -57,13 +57,13 @@ trap.min.css" />
 		</div>
 		<div class="row">
 			<div class="col-4">
-				<a href="http://www.junglebooth.com/"><img src="images5/junglebooth.png"></a>
+				<a href="http://www.junglebooth.com/"><img src="images/junglebooth.png"></a>
 			</div>
 			<div class="col-4">
-				<a href="https://www.lawfullysecured.com/"><img src="images5/lawfullysecured.png"></a>
+				<a href="https://www.lawfullysecured.com/"><img src="images/lawfullysecured.png"></a>
 			</div>
 			<div class="col-4">
-				<a href="https://www.apple.com/"><img src="images5/apple.png"></a>
+				<a href="https://www.apple.com/"><img src="images/apple.png"></a>
 			</div>
 		<div class="row">
 			<div class="col-4">
