changed letters on images

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@ trap.min.css" />
 		</div>
 		<div class="row">
 			<div class="col-4">
-				<a href="http://www.junglebooth.com/"><img src="images/junglebooth.png"></a>
+				<a href="http://www.junglebooth.com/"><img src="images/Junglebooth.png"></a>
 			</div>
 			<div class="col-4">
 				<a href="https://www.lawfullysecured.com/"><img src="images/lawfullysecured.png"></a>
 			</div>
 			<div class="col-4">
-				<a href="https://www.apple.com/"><img src="images/apple.png"></a>
+				<a href="https://www.apple.com/"><img src="images/Apple.png"></a>
 			</div>
 		<div class="row">
 			<div class="col-4">
